test/force-app/main/default/objects/Equipment_Selection__c/Equipment_Selection__c.object-meta.xml
<CustomObject>
    <label>Engineering Equipment Selection</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engineering Equipment Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>