test/force-app/main/default/objects/Equipment_Selection__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <formula>(Watts_Per_Unit__c * Quantity__c )/1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>