test/force-app/main/default/objects/Equipment_Selection__c/fields/Cost_Per_Watt__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Watt__c</fullName>
    <inlineHelpText>$ per Watt DC or AC depending on type (i.e. an inverter would be $ Per Watt AC)</inlineHelpText>
    <label>$ Per Watt</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>