test/force-app/main/default/objects/Equipment_Selection__c/fields/Design_AEP__c.field-meta.xml
<CustomField>
    <fullName>Design_AEP__c</fullName>
    <label>Design &amp; AEP</label>
    <referenceTo>Design_AEP__c</referenceTo>
    <relationshipName>Equipment_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>