test/force-app/main/default/objects/Equipment_Selection__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipName>Equipment_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>