test/force-app/main/default/objects/Equipment_Selection__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Engineering Equipment Selections</relationshipLabel>
    <relationshipName>Engineering_Equipment_Selections</relationshipName>
    <type>Lookup</type>
</CustomField>