test/force-app/main/default/objects/Equipment_Selection__c/fields/No_Quantity__c.field-meta.xml
<CustomField>
    <fullName>No_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Quantity</label>
    <type>Checkbox</type>
</CustomField>