test/force-app/main/default/objects/Equipment_Selection__c/fields/Per_Unit_Changed__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>$ Per Unit Changed</label>
    <type>Checkbox</type>
</CustomField>