test/force-app/main/default/objects/Equipment_Selection__c/fields/W_is_changed__c.field-meta.xml
<CustomField>
    <fullName>W_is_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>$/W is changed</label>
    <type>Checkbox</type>
</CustomField>