test/force-app/main/default/objects/Equipment_Selection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Design_AEP__c</columns>
    <columns>Equipment__c</columns>
    <columns>Quantity__c</columns>
    <columns>Capacity__c</columns>
    <columns>Cost__c</columns>
    <columns>Cost_Per_Unit__c</columns>
    <columns>Cost_Per_Watt__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>