test/force-app/main/default/objects/Equipment_Selection__c/listViews/Modules.listView-meta.xml
<ListView>
    <fullName>Modules</fullName>
    <columns>Design_AEP__c</columns>
    <columns>Equipment__c</columns>
    <columns>Quantity__c</columns>
    <columns>Capacity__c</columns>
    <columns>Cost__c</columns>
    <columns>Cost_Per_Unit__c</columns>
    <columns>Cost_Per_Watt__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Module</value>
    </filters>
    <label>Modules</label>
</ListView>